added groupmate's names to source code

--- a/templates/base.html
+++ b/templates/base.html
@@ -381,6 +381,9 @@
         });
     })();
     </script>
+    <footer style="margin-top:16px; text-align:center; color: var(--muted); font-size:13px;">
+        Project by Suksham Fulzele (ID: 989686048), Sahil Shekhar Desai (ID: 989485311), Sruthi Satyavarapu (ID: 989492060), Sriyuktha Sanagavarapu (ID: 989483329)
+    </footer>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
